package com.iod.pb.webgame;

import "common/iod_common.proto";

//认证
message Authentication {
    required string username = 1;
}

//授权
message Authorization {
    required string username = 1;
    required sint32 timestamp = 2;
    required bytes flags = 3;
}

//角色
message RoleInfo {
    required sint64 uid = 1;  //唯一角色ID
    required string account = 2; //账号
    required string name = 3; //名字
    required sint32 create_time = 4; //创建时间
    required bytes flags = 5; //标识信息
}

//道具
message ItemInfo {
    required sint64 uid = 1; //唯一道具ID
    required sint64 role_id = 2;  //所属玩家
    required sint32 class_id = 3;  //类型ID
    required sint32 get_time = 4;  //获取时间
    required bytes flags = 5; //道具标识信息
}

//玩家
message PlayerInfo {
    required sint32 id = 1; //玩家实例ID
    required string name = 2; //名字
    required bytes flags = 3; //玩家标识信息
    optional sint32 room_id = 4;
    optional sint32 game_id = 5;
}

//大厅
message LobbyInfo {
    required sint32 lobby_id = 1;
}

//房间简略信息（用于进房间前）
message RoomSummaryInfo {
    required sint32 room_id = 1;
    required sint32 map_id = 2;
    required sint32 player_num = 3;
    required bytes flags = 4;
}

//创建房间选项
message RoomCreateOption {
    required sint32 max_player_num = 1;
    required bytes flags = 2;
}

//房间
message RoomInfo {
    required sint32 room_id = 1;
    required sint32 map_id = 2;
    required RoomCreateOption create_option = 3;
    repeated PlayerInfo players = 4;
    required bytes flags = 5;
}

//游戏
message GameInfo {
    required sint32 game_id = 1;
    required sint32 room_id = 2;
    required sint32 map_id = 3;
    required sint32 game_time = 4;
    repeated PlayerInfo players = 5;
    required bytes flags = 6;
}
